# IS

./: .gitignore  CMakeLists.txt  decoder.cpp  encoder.cpp  fft.cpp  fft.hpp  main.cpp
artifacts/: hidden.data
